# Global-Broadcast-Network

./: README.md
.claude/: settings.local.json
.github/workflows/: release-phase0.yml
docs/architecture/: GBN-ARCH-000-System-Architecture-V2.md  GBN-ARCH-000-System-Architecture.md  GBN-ARCH-001-Media-Creation-Network-V2.md  GBN-ARCH-001-Media-Creation-Network.md  GBN-ARCH-002-Media-Publishing.md  GBN-ARCH-003-Global-Distributed-Storage.md  GBN-ARCH-004-Video-Content-Providers.md  GBN-ARCH-005-Video-Playback-App.md  GBN-ARCH-006-Broadcast-Network.md  GBN-ARCH-007-Transport-Mode-Coexistence.md
docs/prototyping/: GBN-PROTO-001-Phase1-Execution-Plan.md  GBN-PROTO-001-Phase1-Media-Creation.md  GBN-PROTO-004-Phase1-Serverless-Scale-Plan.md  GBN-PROTO-004-Phase2-Serverless-Scale-Onion-Plan.md  GBN-PROTO-005-Execution-Phase0-V1-Baseline-Freeze.md  GBN-PROTO-005-Execution-Phase1-V2-Workspace-Boundary.md  GBN-PROTO-005-Execution-Phase3-V2-Publisher-Authority-Plane.md  GBN-PROTO-005-Execution-Phase6-V2-Bridge-Mode-Data-Path.md  GBN-PROTO-005-Execution-Phase8-V2-Reachability-Classification.md  GBN-PROTO-005-Phase2-Distributed-Peer-to-Peer-Onion-Redesign-Execution-Plan.md  GBN-PROTO-005-Phase2-Distributed-Peer-to-Peer-Onion-Redesign.md  GBN-PROTO-005-V1-Baseline-Freeze.md
docs/requirements/: GBN-REQ-000-Top-Level-Requirements.md  GBN-REQ-001-Media-Creation-Network.md  GBN-REQ-002-Media-Publishing.md  GBN-REQ-003-Global-Distributed-Storage.md  GBN-REQ-004-Video-Content-Providers.md  GBN-REQ-005-Video-Playback-App.md  GBN-REQ-006-Broadcast-Network.md
docs/research/: GBN-RESEARCH-001-Agentic-Workflows.md
docs/security/: GBN-SEC-001-Media-Creation-Network.md  GBN-SEC-002-Media-Publishing.md  GBN-SEC-003-Global-Distributed-Storage.md  GBN-SEC-004-Video-Content-Providers.md  GBN-SEC-005-Video-Playback-App.md  GBN-SEC-006-Broadcast-Network.md  GBN-SEC-007-Software-Supply-Chain.md
prototype/gbn-bridge-proto/: .dockerignore  Cargo.toml  Dockerfile.bridge  Dockerfile.bridge-publisher  Dockerfile.publisher-authority  Dockerfile.publisher-receiver  docker-compose.conduit-e2e.yml
prototype/gbn-bridge-proto/configs/: creator.example.toml  host_creator.example.toml
prototype/gbn-bridge-proto/crates/gbn-bridge-cli/: Cargo.toml
prototype/gbn-bridge-proto/crates/gbn-bridge-cli/src/: lib.rs  main.rs
prototype/gbn-bridge-proto/crates/gbn-bridge-publisher/: Cargo.toml
prototype/gbn-bridge-proto/crates/gbn-bridge-publisher/src/: ack.rs  assignment.rs  auth.rs  authority.rs  batching.rs  bootstrap.rs  bridge_scoring.rs  catalog.rs  config.rs  control.rs  dispatcher.rs  http.rs  ingest.rs  lease.rs  lib.rs  metrics.rs  policy.rs  punch.rs  registry.rs  server.rs  service.rs  storage.rs
prototype/gbn-bridge-proto/crates/gbn-bridge-publisher/src/signing/: kms.rs  mod.rs
prototype/gbn-bridge-proto/crates/gbn-bridge-publisher/src/storage/: postgres.rs  recovery.rs  schema.rs
prototype/gbn-bridge-proto/crates/gbn-bridge-publisher/tests/: authority_flow.rs  control_dispatch.rs  persistence_flow.rs
prototype/gbn-bridge-proto/crates/gbn-bridge-runtime/: Cargo.toml
prototype/gbn-bridge-proto/crates/gbn-bridge-runtime/src/: ack_tracker.rs  bootstrap.rs  bootstrap_bridge.rs  bridge.rs  bridge_pool.rs  catalog_cache.rs  chunk_sender.rs  control_client.rs  creator.rs  creator_listener.rs  fanout_scheduler.rs  forwarder.rs  framing.rs  heartbeat_loop.rs  hint_merge.rs  host_creator.rs  lease_state.rs  lib.rs  local_dht.rs  progress_reporter.rs  publisher_client.rs  punch.rs  punch_fanout.rs  reachability.rs  selector.rs  session.rs
prototype/gbn-bridge-proto/crates/gbn-bridge-runtime/tests/: bridge_runtime.rs  control_session.rs  creator_bootstrap.rs  data_path.rs  reachability.rs
prototype/gbn-bridge-proto/docs/: mobile-test-matrix.md
prototype/gbn-bridge-proto/infra/: README-infra.md
prototype/gbn-proto/: .dockerignore  .gitignore  Cargo.toml  Dockerfile.publisher  Dockerfile.relay  README.md  RUNBOOK-Phase1-AWS.md  entrypoint.sh
prototype/gbn-proto/crates/mcn-chunker/: Cargo.toml
prototype/gbn-proto/crates/mcn-chunker/src/: lib.rs
prototype/gbn-proto/crates/mcn-router-sim/: Cargo.toml
prototype/gbn-proto/crates/mcn-router-sim/src/: circuit_manager.rs  control.rs  gossip.rs  lib.rs  observability.rs  relay_engine.rs  swarm.rs
prototype/gbn-proto/crates/mcn-router-sim/tests/: test_gossip_smoke.rs
prototype/gbn-proto/crates/mcn-sanitizer/: Cargo.toml
prototype/gbn-proto/crates/mcn-sanitizer/src/: lib.rs
prototype/gbn-proto/crates/mpub-receiver/: Cargo.toml
prototype/gbn-proto/crates/mpub-receiver/src/: lib.rs
(+98 files in other folders)
