[package]
name = "gbn-bridge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
gbn-bridge-protocol = { path = "../gbn-bridge-protocol" }
gbn-bridge-publisher = { path = "../gbn-bridge-publisher" }
gbn-bridge-runtime = { path = "../gbn-bridge-runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
