[package]
name = "gbn-bridge-publisher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
gbn-bridge-protocol = { path = "../gbn-bridge-protocol" }
postgres = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tungstenite = { workspace = true }

[dev-dependencies]
postgres = { workspace = true }
