[package]
name = "gbn-bridge-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gbn-bridge-protocol = { path = "../gbn-bridge-protocol" }
gbn-bridge-publisher = { path = "../gbn-bridge-publisher" }
thiserror = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }
